# job-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: queries.jsonl  scoring_cases.jsonl
career_copilot/: __init__.py  answer.py  bm25.py  brief.py  cli.py  company_context.py  config.py  contracts.py  cv_export.py  documents.py  embeddings.py  evaluate.py  evaluation_report.py  hermes.py  job_input.py  memory.py  portfolio.py  rubric.py  score_eval.py  vector_store.py  web_app.py  web_research.py  wizard.py
career_copilot/static/: app.js  styles.css
career_copilot/templates/: review.html
data/raw/: job_posting.md  projects.md
data/raw/experience/: experience.md
data/raw/resume/: resume.md
docs/: demo_transcript.md  report.md
examples/experience/: sample_experience.md
examples/jobs/: sample_job.md
examples/projects/: sample_projects.md
examples/resume/: sample_resume.md
tests/: test_config.py  test_contracts.py  test_cv_export.py  test_documents.py  test_evaluation_report.py  test_job_input.py  test_memory.py  test_pipeline.py  test_portfolio.py  test_rubric.py  test_score_eval.py  test_web_app.py  test_web_research.py  test_wizard.py
