[project]
name = "ai-job-copilot"
version = "0.1.0"
description = "Local agentic RAG portfolio project for job and interview intelligence."
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.4.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "exa-py>=1.14.0",
    "sentence-transformers>=4.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
